--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -94,7 +94,6 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.201.133.100;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -213,6 +212,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
+allow 178.30.100.56;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -531,7 +531,6 @@ allow 185.246.188.74;
 allow 185.246.189.99;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
@@ -541,6 +540,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
+allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -811,7 +811,6 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
 allow 201.137.12.46;
-allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -934,7 +933,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -950,12 +948,11 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1175,7 +1172,6 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
-allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1239,6 +1235,7 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1517,7 +1514,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.235.93.78;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1648,6 +1644,7 @@ allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
+allow 52.6.110.211;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
@@ -1688,7 +1685,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.170.62;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1702,7 +1698,6 @@ allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
-allow 82.153.138.120;
 allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
