--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -94,6 +94,7 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.201.133.100;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -109,7 +110,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -227,6 +227,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.213.168.191;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -242,7 +243,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
@@ -803,7 +803,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -811,6 +810,7 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
 allow 201.137.12.46;
+allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -1172,6 +1172,7 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1617,7 +1618,6 @@ allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
-allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
@@ -1644,7 +1644,6 @@ allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
-allow 52.6.110.211;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
@@ -1660,6 +1659,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1698,6 +1698,7 @@ allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
+allow 82.153.138.120;
 allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
@@ -1828,4 +1829,5 @@ allow 95.211.244.28;
 allow 95.211.7.148;
 allow 95.216.145.1;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
