--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -94,6 +94,7 @@ set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.201.133.100;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -109,7 +110,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -227,6 +227,7 @@ set_real_ip_from 179.43.167.205;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.213.168.191;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -242,7 +243,6 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
-set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
@@ -803,7 +803,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -811,6 +810,7 @@ set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
 set_real_ip_from 201.137.12.46;
+set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
@@ -1172,6 +1172,7 @@ set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
 set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1617,7 +1618,6 @@ set_real_ip_from 51.75.64.23;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
-set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
@@ -1644,7 +1644,6 @@ set_real_ip_from 5.255.98.23;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
-set_real_ip_from 52.6.110.211;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
@@ -1660,6 +1659,7 @@ set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
@@ -1698,6 +1698,7 @@ set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.158;
+set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
 set_real_ip_from 82.153.138.182;
 set_real_ip_from 82.153.138.48;
@@ -1828,4 +1829,5 @@ set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 95.216.145.1;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
