--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,6 +110,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -218,7 +219,6 @@ allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
 allow 179.43.159.197;
-allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
@@ -227,7 +227,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.213.168.191;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -243,6 +242,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
@@ -803,6 +803,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -933,6 +934,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -953,6 +955,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1528,6 +1531,7 @@ allow 37.27.20.230;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.193.139.142;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1618,6 +1622,7 @@ allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
+allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
@@ -1697,6 +1702,7 @@ allow 80.78.27.108;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
