--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,6 +110,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -218,7 +219,6 @@ set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
 set_real_ip_from 179.43.159.197;
-set_real_ip_from 179.43.159.198;
 set_real_ip_from 179.43.159.199;
 set_real_ip_from 179.43.159.200;
 set_real_ip_from 179.43.159.201;
@@ -227,7 +227,6 @@ set_real_ip_from 179.43.167.205;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.213.168.191;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -243,6 +242,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
@@ -803,6 +803,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -933,6 +934,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
@@ -953,6 +955,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1528,6 +1531,7 @@ set_real_ip_from 37.27.20.230;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.193.139.142;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
@@ -1618,6 +1622,7 @@ set_real_ip_from 51.75.64.23;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
+set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
@@ -1697,6 +1702,7 @@ set_real_ip_from 80.78.27.108;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
