--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -22,6 +22,7 @@ set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
+set_real_ip_from 104.244.72.37;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
@@ -194,7 +195,6 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
-set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
@@ -219,6 +219,7 @@ set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
 set_real_ip_from 179.43.159.197;
+set_real_ip_from 179.43.159.198;
 set_real_ip_from 179.43.159.199;
 set_real_ip_from 179.43.159.200;
 set_real_ip_from 179.43.159.201;
@@ -282,7 +283,6 @@ set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
-set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.193.127.76;
 set_real_ip_from 185.193.127.88;
 set_real_ip_from 185.193.158.134;
@@ -499,6 +499,7 @@ set_real_ip_from 185.222.66.188;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
+set_real_ip_from 185.230.162.218;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.239.71.160;
@@ -531,6 +532,7 @@ set_real_ip_from 185.246.188.74;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
+set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
@@ -898,7 +900,6 @@ set_real_ip_from 23.129.64.227;
 set_real_ip_from 23.129.64.228;
 set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.248.139;
 set_real_ip_from 23.137.248.152;
 set_real_ip_from 23.137.249.143;
 set_real_ip_from 23.137.249.150;
@@ -964,7 +965,6 @@ set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:96f9::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
-set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:148f::1;
@@ -1135,7 +1135,6 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:c010:8fb::bee;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1178,7 +1177,6 @@ set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
-set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
@@ -1284,7 +1282,6 @@ set_real_ip_from 2a0a:3840:8078:25:0:504e:1921:1337;
 set_real_ip_from 2a0a:3840:8078:27:0:504e:1b6c:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
-set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
@@ -1472,6 +1469,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:2500:571:3d9:490b:80ce:9da2:c459;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
@@ -1518,9 +1516,9 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 3.223.219.32;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
-set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
@@ -1531,10 +1529,8 @@ set_real_ip_from 37.27.20.230;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.193.139.142;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
-set_real_ip_from 45.130.20.250;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1590,6 +1586,7 @@ set_real_ip_from 45.9.148.219;
 set_real_ip_from 45.9.150.103;
 set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
+set_real_ip_from 45.94.31.143;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.95.169.184;
 set_real_ip_from 45.95.169.225;
@@ -1629,7 +1626,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1758,7 +1754,6 @@ set_real_ip_from 89.58.18.210;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 89.58.41.251;
-set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
@@ -1793,7 +1788,6 @@ set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.99.104.128;
-set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.103.124.101;
