--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -133,7 +133,6 @@ set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:96f9::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
-set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:148f::1;
@@ -303,7 +302,6 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:c010:8fb::bee;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -346,7 +344,6 @@ set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
-set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
@@ -452,7 +449,6 @@ set_real_ip_from 2a0a:3840:8078:25:0:504e:1921:1337;
 set_real_ip_from 2a0a:3840:8078:27:0:504e:1b6c:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
-set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
@@ -640,6 +636,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:2500:571:3d9:490b:80ce:9da2:c459;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
